# old-floaout

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-FORMAT  LICENSE-MIT  README.md  desktop.ini
pre-floaout/blower/: README.md  blow.rs  blow_tests.rs  io.rs
pre-floaout/pop/: Cargo.toml
pre-floaout/soap/: Cargo.toml
pre-floaout/soap/src/: main.rs
pre-floaout/soap/src/res/: soap.css
pre-floaout/some/: Cargo.toml  func.rs
pre-floaout/some/src/: lib.rs  main.rs
src/: lib.rs
src/format/: blow.rs  bub.rs  mod.rs  oao.rs  wav.rs
src/io/: mod.rs  read.rs  write.rs
tests/: blow_tests.rs  bub_test.rs  bub_tests.rs  oao_tests.rs  wav_test.rs  wav_tests.rs
