[package]
name = "floaout"
version = "0.1.0"
authors = ["Kazuki Kurota"]
license = "MIT OR Apache-2.0"
description = "A brand new audio format in Rust"
keywords = ["audio", "bub", "bubble", "floaout", "oao"]
categories = ["multimedia::audio"]
exclude = [".gitignore", "floaout_ja.pdf"]
readme = "README.md"
repository = "https://github.com/kurotakazuki/floaout"
edition = "2018"